cmake_minimum_required(VERSION 3.8)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/1_绑定实现类)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/2_当前会话信息)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/3_调用方式)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/4_调用进度回调)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/5_传输层)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/6_发布订阅)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/7_多态序列化)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demo)