cmake_minimum_required(VERSION 3.8)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/1_绑定实现类)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/2_当前会话信息)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/3_调用方式)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/4_调用进度回调)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/5_传输层)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/6_发布订阅)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/7_多态序列化)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/8_二进制数据)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/9_服务端对象缓存)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/10_服务器连接数限制)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/11_服务器线程)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/12_服务器最大输入长度)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/13_复杂容器)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/14_获取底层传输协议)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/15_客户端)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/16_客户端指定本地IP接口)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demo)